--- a/app/src/main/res/layout/list_element.xml
+++ b/app/src/main/res/layout/list_element.xml
@@ -14,12 +14,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left">
-    <TextView
-        android:id="@+id/productName"
-        android:layout_width="180dp"
-        android:layout_height="match_parent"
-        android:textColor="@color/btnColor"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
+
+        <TextView
+            android:id="@+id/productName"
+            android:layout_width="180dp"
+            android:layout_height="match_parent"
+            android:contentDescription="product name"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/btnColor" />
         </LinearLayout>
 
     <LinearLayout
